<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnalisaGejala">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/psyche_illustration"
                android:layout_width="200dp"
                android:layout_height="144.24dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:contentDescription="@string/desc_illustration"
                android:scaleType="fitXY"
                app:srcCompat="@mipmap/undraw_fatherhood_7i19" />

            <TextView
                android:id="@+id/txtDiagnosaHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@android:color/black"
                android:text="@string/diagnosaHead" />

            <TextView
                android:id="@+id/txtDiagnosaHasil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_light"
                android:textColor="@android:color/black"
                android:text="@string/diagnosaHasil" />

            <Button
                android:id="@+id/btn_rekomendasi"
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/btn_rekomendasi"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>