<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/skye_illustration"
            android:layout_width="230dp"
            android:layout_height="174.91dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/desc_illustration"
            android:scaleType="fitXY"
            app:srcCompat="@mipmap/undraw_quality_time_wiyl" />

        <TextView
            android:id="@+id/textDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/montserrat_light"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/home_desc" />

        <Button
            android:id="@+id/btn_mulai_analisa"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bg_btn"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/btn_start"
            android:textColor="@android:color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>